fix side menu hover box truncating and reduce logo side

--- a/public/styles/site/home.less
+++ b/public/styles/site/home.less
@@ -72,7 +72,7 @@
      height: 700px;
     .quick-links {
        position: absolute;
-       top: 20px;
+       top: 15px;
        right: 200px;
        ul {
          margin: 0;
@@ -138,7 +138,11 @@
   #service-links {
      padding: 52px 10px 51px 10px;
   }
-
+  #hero {
+    .quick-links {
+	  top: 20px;
+	}
+  }
 }
 
 
