--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -23,25 +23,16 @@ body {
 }
 
 #menu {
-	.side-menu-mobile(@width:250px,@font:'Open Sans Condensed',@font-size:18px);
-	background: #1c1c1c; /* Old browsers */
-	background: -moz-linear-gradient(top,  #1c1c1c 40%, #0f1c12 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(40%,#1c1c1c), color-stop(100%,#0f1c12)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #1c1c1c 40%,#0f1c12 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #1c1c1c 40%,#0f1c12 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #1c1c1c 40%,#0f1c12 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #1c1c1c 40%,#0f1c12 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1c1c1c', endColorstr='#0f1c12',GradientType=0 ); /* IE6-9 */
-  a {
-		font-weight: bold;
-  }
+	.side-menu-mobile(@width:250px,@font:'Open Sans Condensed',@font-size:1.33em);
+	background: #111;
 }
 
 .logo {
 	position: absolute;
-	top: 10px;
+	top: 12px;
+	left: 10px;
 	img {
-		height: 30px;
+		height: 25px;
 	}
 }
 
@@ -81,7 +72,7 @@ body {
 }
 @media screen and (min-width:@screen-iphone-min) {
 	.logo {
-		left: 10px;
+		left: 15px;
 	}
 }
 
@@ -93,10 +84,10 @@ body {
 
 @media screen and (min-width:@screen-sm-min) {
 	.logo {
-		top: 15px;
+		top: 10px;
 		left: 30px;
 		img {
-			height: 40px;
+			height: 33px;
 		}
 	}
 	#menu {
@@ -109,7 +100,7 @@ body {
 
 @media screen and (min-width:@screen-md-min) {
 	.logo {
-		top: 10px;
+		top: 12px;
 	}
 	.service-link {
 		.icon-logo {
@@ -121,10 +112,10 @@ body {
 
 @media screen and (min-width:@screen-lg-min) {
 	.logo {
-		top: 20px;
-		left: 50px;
+		top: 15px;
+		left: 30px;
 		img {
-			height: 50px;
+			height: 35px;
 		}
 	}
 	.service-link .icon-logo {
